fix: Lower left and right percentages on tablet view

--- a/css/css-grid-in-practice.css
+++ b/css/css-grid-in-practice.css
@@ -150,7 +150,7 @@ a {
     /* tablet grid layout */
     .wrapper {
         grid-row-gap: 5em;
-        grid-template-columns: 10% 1fr 10%;
+        grid-template-columns: 5% 1fr 5%;
         grid-template-areas:
                 ". header ."
                 ". section-1 ."
